# etcd-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: client.rs  config.rs  core.rs  lib.rs  main.rs  metrics.rs  state.rs  update.rs
src-tauri/src/core/: split_batch.rs
src/api/: etcd.ts
src/components/: AnnotatedText.tsx  Cluster.tsx  Dashboard.tsx  Logs.tsx  Onboarding.tsx  PathInput.tsx  PathSelectionButton.tsx  Profiles.tsx  Settings.tsx  TimestampChip.tsx
src/components/dialogs/: AddKeyDialog.tsx  DeleteKeyDialog.tsx  EditKeyDialog.tsx  ProfileEditDialog.tsx  UpdateCheckDialog.tsx  ViewValueDialog.tsx
src/components/tabs/: Cluster.tsx  Dashboard.tsx  Logs.tsx  Metrics.tsx  Onboarding.tsx  Profiles.tsx  Settings.tsx
src/components/tabs/metrics/: MetricsDetailDrawer.tsx  MetricsFilters.tsx  types.ts
src/components/ui/: color-mode.tsx  password-input.tsx  provider.tsx
src/contexts/: active-profile.tsx
src/hooks/: useDelayedLoading.ts  useEtcdQuery.ts  useMetricsSearch.ts
src/utils/: format.ts  inputProps.ts  timestamp.ts
