[package]
name = "etcd-gui"
version = "1.0.0"
description = "A Tauri App"
authors = ["Evanescentum"]
edition = "2024"
repository = "https://github.com/evanescentum/etcd-gui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "etcd_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["devtools"] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.46.0", features = ["full"] }
etcd-client = { version = "0.15.0", features = ["tls"] }
anyhow = "1.0.98"
tonic = { version = "0.12" }
open = "5.3.2"
tauri-plugin-clipboard-manager = "2.3.0"
rand = "0.9.2"
tauri-plugin-log = "2.7.1"
fern = "0.7.1"
log = "0.4.28"
font-kit = "0.14.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.3.0"
